@@ -15,6 +15,7 @@ opensesame (3.0.3~a3-ubuntu1) wily; urgency=medium
     - Don't try to copy and edit non copyable/editable treeitems
     - Don't crash when failing to get size information for file pool
     - Catch invalid variable names in logger script
+    - Don't allow editing run-if statement of top-level sequence in sequence-view
   * Improvements
     - Fix templates for Python 3
     - Fix Exception handling for multiprocess_runner in Python 3
